--- a/css/style.css
+++ b/css/style.css
@@ -277,6 +277,14 @@ nav {
     list-style: none;
 }
 
+.org {
+    display: none;
+}
+
+.visible {
+    display: inline-block;
+}
+
 .dot {
     display: inline-block;
     margin-right: 1rem;
